--- a/app/src/main/res/layout/activity_account_settings.xml
+++ b/app/src/main/res/layout/activity_account_settings.xml
@@ -74,11 +74,14 @@
             android:padding="@dimen/label_input_padding"
             android:textColor="@color/neutral_light" />
 
-        <ImageView
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="120dp"
             android:layout_weight="1"
-            android:id="@+id/photoChange" />
+            android:id="@+id/photoChange"
+            android:orientation="horizontal"
+            android:clickable="true"
+            android:onClick="takePhoto"/>
     </TableRow>
 
     <TableRow
