--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -74,11 +74,14 @@
             android:padding="@dimen/label_input_padding"
             android:textColor="@color/neutral_light" />
 
-        <ImageView
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="120dp"
             android:layout_weight="1"
-            android:id="@+id/photoChange" />
+            android:id="@+id/photoChange"
+            android:orientation="horizontal"
+            android:clickable="true"
+            android:onClick="takePhoto"/>
     </TableRow>
 
     <TableRow
@@ -105,7 +108,11 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:padding="@dimen/label_input_padding"
                 android:id="@+id/syncAuto"
-                android:checked="true"/>
+                android:checked="true"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/label_input_padding"
+                android:paddingRight="@dimen/label_input_padding"
+                android:paddingBottom="@dimen/label_input_padding" />
             <RadioButton
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -113,15 +120,22 @@
                 android:textColor="@color/neutral_light"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:padding="@dimen/label_input_padding"
-                android:id="@+id/syncWifi"/>
+                android:id="@+id/syncWifi"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/label_input_padding"
+                android:paddingRight="@dimen/label_input_padding"
+                android:paddingBottom="@dimen/label_input_padding" />
             <RadioButton
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="Manually"
                 android:textColor="@color/neutral_light"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:padding="@dimen/label_input_padding"
-                android:id="@+id/syncManual"/>
+                android:id="@+id/syncManual"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/label_input_padding"
+                android:paddingRight="@dimen/label_input_padding"
+                android:paddingBottom="@dimen/label_input_padding" />
         </RadioGroup>
     </TableRow>
 
